; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/kerberos/extr_kuhl_m_kerberos.c_LsaCallKerberosPackage.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/kerberos/extr_kuhl_m_kerberos.c_LsaCallKerberosPackage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_HANDLE_NO_LONGER_VALID = common dso_local global i32 0, align 4
@g_hLSA = common dso_local global i64 0, align 8
@g_isAuthPackageKerberos = common dso_local global i64 0, align 8
@g_AuthenticationPackageId_Kerberos = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LsaCallKerberosPackage(i32 %0, i32 %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* @STATUS_HANDLE_NO_LONGER_VALID, align 4
  store i32 %12, i32* %11, align 4
  %13 = load i64, i64* @g_hLSA, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %27

15:                                               ; preds = %5
  %16 = load i64, i64* @g_isAuthPackageKerberos, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %15
  %19 = load i64, i64* @g_hLSA, align 8
  %20 = load i32, i32* @g_AuthenticationPackageId_Kerberos, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @LsaCallAuthenticationPackage(i64 %19, i32 %20, i32 %21, i32 %22, i32* %23, i32 %24, i32 %25)
  store i32 %26, i32* %11, align 4
  br label %27

27:                                               ; preds = %18, %15, %5
  %28 = load i32, i32* %11, align 4
  ret i32 %28
}

declare dso_local i32 @LsaCallAuthenticationPackage(i64, i32, i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
